load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//:index.bzl", "helm_version")

package(default_visibility = ["//visibility:public"])

helm_version(
    name = "version",
)

pkg_tar(
    name = "rules_helm-0.0.1",
    srcs = glob(["*.bzl"]) + [
        "BUILD.bazel",
        "//toolchains/helm:package_contents",
        "//internal/common:package_contents",
        "//internal/helm:package_contents",
    ],
    extension = "tar.gz",
    strip_prefix = ".",
    package_dir = "rules_helm-0.0.1",
    tags = ["manual"],
)
