load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

licenses(["notice"])  # Apache 2.0

package(default_visibility = ["//internal:__subpackages__"])

bzl_library(
    name = "bzl",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package_contents",
    srcs = glob(["*.bzl"]) + [
        "BUILD.bazel",
    ],
    visibility = ["//:__pkg__"],
)
