load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "bzl",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package_contents",
    srcs = glob(["*.bzl"]) + [
        "BUILD.bazel",
    ],
    visibility = ["//:__pkg__"],
)
