load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":helm.bzl", "helm_template")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "bzl",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package_contents",
    srcs = glob(["*.bzl"]) + [
        "BUILD.bazel",
    ],
    visibility = ["//:__pkg__"],
)

helm_template(
    name = "template_test",
    chart_tar = "@jenkins//:chart",
    namespace = "test",
    release_name = "jenkins",
)
